Fix report's chart cluttered with overlapping data labels

When there was too many data labels on a report's chart, some texts were
overlapping resulting in cluttered and unreadable graph.

This commit fixes the issue so that in regions crowded with labels only
one data label text is displayed.

BUG: 399261
Signed-off-by: Robert Szczesiak <dev.rszczesiak@gmail.com>